elastic/templates/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic
  labels:
    private-gateway-access: "true"
