elastic/templates/10-http-apm-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: elastic-kibana
  namespace: elastic
spec:
  parentRefs:
  - name: private-gateway
    namespace: infra
  hostnames:
  - "apm.rovzane.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: logcluster-es-http
      port: 9200
