elastic/templates/10-http-es-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: elastic-es
  namespace: elastic
spec:
  parentRefs:
  - name: private-gateway
    namespace: infra
  hostnames:
  - "elastic.rovzane.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: kibana-kb-http
      port: 5601
